game service config hook